--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-lib",
+  "name": "test-lib-deodeep",
   "version": "1.0.0",
   "description": "publish lib",
   "main": "index.js",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/deodeep/Test-Lib#readme",
   "dependencies": {
+    "react": "^18.2.0",
     "typescript": "^4.9.5"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
